// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`SearchResults Should render search resuls with props 1`] = `
<div
  className="results-container"
  data-testid="search-results"
  id="search-results"
>
  <div
    className="infinite-scroll-component__outerdiv"
    style={Object {}}
  >
    <div
      className="infinite-scroll-component results"
      style={
        Object {
          "WebkitOverflowScrolling": "touch",
          "height": "auto",
          "overflow": "auto",
        }
      }
    >
      <h4>
        Loading...
      </h4>
    </div>
  </div>
</div>
`;

exports[`SearchResults Should render search resuls with props 2`] = `
<div
  className="results-container"
  data-testid="search-results"
  id="search-results"
>
  <div
    className="infinite-scroll-component__outerdiv"
    style={Object {}}
  >
    <div
      className="infinite-scroll-component results"
      style={
        Object {
          "WebkitOverflowScrolling": "touch",
          "height": "auto",
          "overflow": "auto",
        }
      }
    >
      <div
        className="video-card-container"
        data-testid="video-card-0"
      >
        <iframe
          allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture;"
          allowFullScreen={true}
          className="thumbnail"
          data-testid="youtube-video-0"
          src="https://www.youtube.com/embed/Y9faB5tXij0"
          title="Johnny Stimson - Flower (Piano Version)_0"
        />
        <div
          className="details"
        >
          <div
            className="title"
            data-testid="video-title-0"
          >
            Johnny Stimson - Flower (Piano Version)
          </div>
          <div
            className="publish-date"
            data-testid="publish-date-0"
          >
            Fri Nov 19 2021
          </div>
          <div
            className="channel"
          >
            <div
              className="channel-logo"
            >
              J
            </div>
            <div
              className="channel-name"
              data-testid="channel-title-0"
            >
              Johnny Stimson
            </div>
          </div>
          <div
            className="description"
            data-testid="video-description-0"
          >
            Follow Johnny on Instagram: http://bit.ly/2iqacB1
          </div>
        </div>
      </div>
    </div>
  </div>
</div>
`;
